# fusor-sim

./: .gitignore  README.md  VISION.md  pyproject.toml
.claude/: launch.json
guide/: 00_perche_la_fusione.md  01_il_fusore.md  02_leggere_il_referto.md  03_esperimenti_parametri.md  04_la_griglia.md  05_i_muri_della_fisica.md  06_geometria_e_campo.md  07_onesta_numerica.md  08_oltre_il_fusore.md  09_il_tokamak_in_pratica.md
knowledge/: barriera_coulombiana.md  bilancio_potenza.md  fusore.md  lawson.md  parametri.md
src/fusor_sim/: __init__.py
src/fusor_sim/app/: __init__.py  server.py
src/fusor_sim/app/static/: index.html
src/fusor_sim/catalog/: __init__.py
src/fusor_sim/chat/: __init__.py  llm_client.py  pipeline.py
src/fusor_sim/contracts/: __init__.py  chat_intent.py  field_preview.py  ownership.py  physics_verdict.py  run_config.py  sim_state.py  tokamak.py
src/fusor_sim/engine/: __init__.py  fusion.py  particles.py  simulation.py  tokamak.py  verdict.py
src/fusor_sim/orchestrator/: __init__.py  autotuner.py  core.py  router.py
src/fusor_sim/rag/: __init__.py  retriever.py
src/fusor_sim/solvers/: __init__.py  elliptic.py  grad_shafranov.py  poisson_cartesian3d.py  poisson_spherical.py
tests/: test_app.py  test_chat_rag.py  test_contracts.py  test_engine.py  test_field_preview.py  test_guide.py  test_orchestrator.py  test_solvers.py  test_tokamak.py
