[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fusor-sim"
version = "0.1.0"
description = "Simulatore didattico di fusione a confinamento elettrostatico (fusore Farnsworth-Hirsch)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
